completato layout footer

--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
             <div class="col jumbo-item">
                 <img src="./img/banner-image.png" alt="" class="jumbo-img">
             </div>
-            <div class=" col jumbo-content jumbo-item flex-grow-1 text-center d-flex flex-column justify-content-center">
+            <div
+                class=" col jumbo-content jumbo-item flex-grow-1 text-center d-flex flex-column justify-content-center">
                 <div>
                     <h1 class="jumbo-title">Rubber Duck Debuggings</h1>
                     <p class="jumbo-paragraph">Spiegare il codice a una paperella di gomma aiuta i progammatori a
@@ -97,7 +98,7 @@
             </div>
         </div>
     </header>
-    <main>
+    <main class="mb-5">
         <!-- # Pumti di forza -->
         <section id="i-punti-di-forza" class="my-5 container-fluid">
             <div class="row row-cols-1 row-cols-lg-3">
@@ -153,7 +154,7 @@
             <h2 class="text-center sections-title py-5">Cosa ne pensano i nostri sviluppatori</h2>
         </section>
         </div>
-        <section  class="container-fluid py-5 bg-section-paperelle" id="paperelle">
+        <section class="container-fluid py-5 bg-section-paperelle" id="paperelle">
             <h2 class="sections-title text-center">La collezione di paperelle</h2>
             <p class="py-5 text-center">Una paperella per ogni stile di programmazione</p>
             <div class="row row-cols-2 row-cols-lg-3">
@@ -196,55 +197,63 @@
                         <div class="accordion-item">
                             <h2 class="accordion-header">
                                 <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#faqsOne" aria-expanded="true"
-                                    aria-controls="faqsOne">
+                                    data-bs-target="#faqsOne" aria-expanded="true" aria-controls="faqsOne">
                                     Come posso utilizzare la paperella di gomma per il debugging?
                                 </button>
                             </h2>
                             <div id="faqsOne" class="accordion-collapse collapse show">
                                 <div class="accordion-body">
-                                    Il rubber duck debugging è semplice: spiega il tuo codice alla paperella di gomma come se fosse un collega. Descrivendo ogni passo, potresti individuare errori o capire meglio il problema. La paperella non risponde, ma ti aiuta a chiarire i tuoi pensieri.
+                                    Il rubber duck debugging è semplice: spiega il tuo codice alla paperella di gomma
+                                    come se fosse un collega. Descrivendo ogni passo, potresti individuare errori o
+                                    capire meglio il problema. La paperella non risponde, ma ti aiuta a chiarire i tuoi
+                                    pensieri.
                                 </div>
                             </div>
                         </div>
                         <div class="accordion-item">
                             <h2 class="accordion-header">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#faqsTwo" aria-expanded="false"
-                                    aria-controls="faqsTwo">
+                                    data-bs-target="#faqsTwo" aria-expanded="false" aria-controls="faqsTwo">
                                     Quali sono i vantaggi di usare una paperella di gomma per i programmatori?
                                 </button>
                             </h2>
                             <div id="faqsTwo" class="accordion-collapse collapse">
                                 <div class="accordion-body">
-                                    La paperella di gomma aiuta i programmatori a pensare in modo critico e a verbalizzare i problemi. Questo processo può portare a nuove intuizioni e soluzioni. Inoltre, è un ottimo strumento antistress e aggiunge un tocco di personalitàalla scrivania.
+                                    La paperella di gomma aiuta i programmatori a pensare in modo critico e a
+                                    verbalizzare i problemi. Questo processo può portare a nuove intuizioni e soluzioni.
+                                    Inoltre, è un ottimo strumento antistress e aggiunge un tocco di personalitàalla
+                                    scrivania.
                                 </div>
                             </div>
                         </div>
                         <div class="accordion-item">
                             <h2 class="accordion-header">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#faqsThree" aria-expanded="false"
-                                    aria-controls="faqsThree">
-                                    Posso usare la paperella di gomma indipendentemente dal linguaggio di programmazione che utilizzo?
+                                    data-bs-target="#faqsThree" aria-expanded="false" aria-controls="faqsThree">
+                                    Posso usare la paperella di gomma indipendentemente dal linguaggio di programmazione
+                                    che utilizzo?
                                 </button>
                             </h2>
                             <div id="faqsThree" class="accordion-collapse collapse">
                                 <div class="accordion-body">
-                                    Assolutamente sì! La paperella di gomma è universale e funziona con qualsiasi linguaggio di programmazione. Non importa se stai scrivendo in Python, Java, C++ o qualsiasi altro linguaggio, la paperella sarà sempre pronta ad ascoltarti.
+                                    Assolutamente sì! La paperella di gomma è universale e funziona con qualsiasi
+                                    linguaggio di programmazione. Non importa se stai scrivendo in Python, Java, C++ o
+                                    qualsiasi altro linguaggio, la paperella sarà sempre pronta ad ascoltarti.
                                 </div>
                             </div>
                         </div>
                         <div class="accordion-item">
                             <h2 class="accordion-header">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faqsFour"
-                                    aria-expanded="false" aria-controls="faqsFour">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#faqsFour" aria-expanded="false" aria-controls="faqsFour">
                                     Quanto dettagliatamente devo spiegare il mio codice alla paperella di gomma?
                                 </button>
                             </h2>
                             <div id="faqsFour" class="accordion-collapse collapse">
                                 <div class="accordion-body">
-                                    Dovresti spiegare ogni dettaglio del tuo codice. Più sei dettagliato, più è probabile che tu scopra errori o ottenga nuove prospettive. Questo processo ti costringe a rivedere attentamente ogni parte del tuo lavoro.
+                                    Dovresti spiegare ogni dettaglio del tuo codice. Più sei dettagliato, più è
+                                    probabile che tu scopra errori o ottenga nuove prospettive. Questo processo ti
+                                    costringe a rivedere attentamente ogni parte del tuo lavoro.
                                 </div>
                             </div>
                         </div>
@@ -296,7 +305,57 @@
             </div>
         </section>
     </main>
-    <footer id="newsletter"></footer>
+    <footer class="pt-5">
+        <div class="bg-section-newsletter d-flex flex-column align-items-center py-3">
+            <h2 class="sections-title text-center">Iscriviti per rimanere<br>aggiornato</h2>
+            <p class="mt-2">Iscriviti alla nostra newsletter per restare aggiornato su sconti e novità</p>
+
+            <form action="https://learning.tizianonicolai.com/request-catcher/index.php" method="post"
+                class="input-group align-self-center">
+                <input type="email" class="form-control" placeholder="Lascia la tua email qui..." name="newsletter"
+                    id="newsletter">
+                <button type="submit" class="input-group-text">
+                    <svg xmlns="http://www.w3.org/2000/svg" id="send" viewBox="0 0 32 32">
+                        <path fill="#04DF6C"
+                            d="M26.07 3.996a2.974 2.974 0 0 0-.933.223h-.004c-.285.113-1.64.683-3.7 1.547l-7.382 3.109c-5.297 2.23-10.504 4.426-10.504 4.426l.062-.024s-.359.118-.734.375a2.03 2.03 0 0 0-.586.567c-.184.27-.332.683-.277 1.11c.09.722.558 1.155.894 1.394c.34.242.664.355.664.355h.008l4.883 1.645c.219.703 1.488 4.875 1.793 5.836c.18.574.355.933.574 1.207c.106.14.23.257.379.351a1.119 1.119 0 0 0 .246.106l-.05-.012c.015.004.027.016.038.02c.04.011.067.015.118.023c.773.234 1.394-.246 1.394-.246l.035-.028l2.883-2.625l4.832 3.707l.11.047c1.007.442 2.027.196 2.566-.238c.543-.437.754-.996.754-.996l.035-.09l3.734-19.129c.106-.472.133-.914.016-1.343a1.807 1.807 0 0 0-.781-1.047a1.872 1.872 0 0 0-1.067-.27zm-.101 2.05c-.004.063.008.056-.02.177v.011l-3.699 18.93c-.016.027-.043.086-.117.145c-.078.062-.14.101-.465-.028l-5.91-4.531l-3.57 3.254l.75-4.79l9.656-9c.398-.37.265-.448.265-.448c.028-.454-.601-.133-.601-.133l-12.176 7.543l-.004-.02l-5.836-1.965v-.004l-.015-.003a.27.27 0 0 0 .03-.012l.032-.016l.031-.011s5.211-2.196 10.508-4.426c2.652-1.117 5.324-2.242 7.379-3.11a807.312 807.312 0 0 1 3.66-1.53c.082-.032.043-.032.102-.032z" />
+                    </svg>
+                </button>
+            </form>
+            <div class="d-flex gap-2">
+                <div>
+                    <svg xmlns="http://www.w3.org/2000/svg" id="facebook" viewBox="0 0 24 24">
+                        <path fill="#04DF6C"
+                            d="M14 13.5h2.5l1-4H14v-2c0-1.03 0-2 2-2h1.5V2.14c-.326-.043-1.557-.14-2.857-.14C11.928 2 10 3.657 10 6.7v2.8H7v4h3V22h4v-8.5Z" />
+                    </svg>
+                </div>
+                <div>
+                    <svg xmlns="http://www.w3.org/2000/svg" id="twitter" viewBox="0 0 24 24">
+                        <path fill="#04DF6C"
+                            d="M22.46 6c-.77.35-1.6.58-2.46.69c.88-.53 1.56-1.37 1.88-2.38c-.83.5-1.75.85-2.72 1.05C18.37 4.5 17.26 4 16 4c-2.35 0-4.27 1.92-4.27 4.29c0 .34.04.67.11.98C8.28 9.09 5.11 7.38 3 4.79c-.37.63-.58 1.37-.58 2.15c0 1.49.75 2.81 1.91 3.56c-.71 0-1.37-.2-1.95-.5v.03c0 2.08 1.48 3.82 3.44 4.21a4.22 4.22 0 0 1-1.93.07a4.28 4.28 0 0 0 4 2.98a8.521 8.521 0 0 1-5.33 1.84c-.34 0-.68-.02-1.02-.06C3.44 20.29 5.7 21 8.12 21C16 21 20.33 14.46 20.33 8.79c0-.19 0-.37-.01-.56c.84-.6 1.56-1.36 2.14-2.23Z" />
+                    </svg>
+                </div>
+                <div>
+                    <svg xmlns="http://www.w3.org/2000/svg" id="instagram" viewBox="0 0 24 24">
+                        <path fill="#04DF6C"
+                            d="M7.8 2h8.4C19.4 2 22 4.6 22 7.8v8.4a5.8 5.8 0 0 1-5.8 5.8H7.8C4.6 22 2 19.4 2 16.2V7.8A5.8 5.8 0 0 1 7.8 2m-.2 2A3.6 3.6 0 0 0 4 7.6v8.8C4 18.39 5.61 20 7.6 20h8.8a3.6 3.6 0 0 0 3.6-3.6V7.6C20 5.61 18.39 4 16.4 4H7.6m9.65 1.5a1.25 1.25 0 0 1 1.25 1.25A1.25 1.25 0 0 1 17.25 8A1.25 1.25 0 0 1 16 6.75a1.25 1.25 0 0 1 1.25-1.25M12 7a5 5 0 0 1 5 5a5 5 0 0 1-5 5a5 5 0 0 1-5-5a5 5 0 0 1 5-5m0 2a3 3 0 0 0-3 3a3 3 0 0 0 3 3a3 3 0 0 0 3-3a3 3 0 0 0-3-3Z" />
+                    </svg>
+                </div>
+                <div>
+                    <svg xmlns="http://www.w3.org/2000/svg" id="linkedin" viewBox="0 0 24 24">
+                        <path fill="#04DF6C"
+                            d="M6.94 5a2 2 0 1 1-4-.002a2 2 0 0 1 4 .002ZM7 8.48H3V21h4V8.48Zm6.32 0H9.34V21h3.94v-6.57c0-3.66 4.77-4 4.77 0V21H22v-7.93c0-6.17-7.06-5.94-8.72-2.91l.04-1.68Z" />
+                    </svg>
+                </div>
+                <div>
+                    <svg xmlns="http://www.w3.org/2000/svg" id="youtube" viewBox="0 0 24 24">
+                        <path fill="#04DF6C"
+                            d="M12.244 4c.534.003 1.87.016 3.29.073l.504.022c1.429.067 2.857.183 3.566.38c.945.266 1.687 1.04 1.938 2.022c.4 1.56.45 4.602.456 5.339l.001.152v.174c-.007.737-.057 3.78-.457 5.339c-.254.985-.997 1.76-1.938 2.022c-.709.197-2.137.313-3.566.38l-.504.023c-1.42.056-2.756.07-3.29.072l-.235.001h-.255c-1.13-.007-5.856-.058-7.36-.476c-.944-.266-1.687-1.04-1.938-2.022c-.4-1.56-.45-4.602-.456-5.339v-.326c.006-.737.056-3.78.456-5.339c.254-.985.997-1.76 1.939-2.021c1.503-.419 6.23-.47 7.36-.476h.489ZM9.999 8.5v7l6-3.5l-6-3.5Z" />
+                    </svg>
+                </div>
+            </div>
+        </div>
+        <div class="text-center mt-1 pb-4"> &copy; 2024 BootLanding product. Designed by Boolean</div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
