--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                         <a href="#" class="offcanvas-title">
                             <img src="./img/logo.png" alt="logo-ducks-debugging">
                         </a>
+                        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
                     <ul class="navbar-nav offcanvas-body">
                         <li class="nav-item">
@@ -76,7 +77,7 @@
                             <a class="nav-link" href="#faqs">FAQs</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Newsletter</a>
+                            <a class="nav-link" href="#newsletter">Newsletter</a>
                         </li>
                     </ul>
                 </div>
