cambiato font-size e font-weight delle head degli accordion nella sezione Faqs

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                     <div class="accordion" id="accordionfaqs">
                         <div class="accordion-item">
                             <h2 class="accordion-header">
-                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                <button class="accordion-button fs-5 fw-semibold" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#faqsOne" aria-expanded="true" aria-controls="faqsOne">
                                     Come posso utilizzare la paperella di gomma per il debugging?
                                 </button>
@@ -213,7 +213,7 @@
                         </div>
                         <div class="accordion-item">
                             <h2 class="accordion-header">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                <button class="accordion-button fs-5 fw-semibold collapsed" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#faqsTwo" aria-expanded="false" aria-controls="faqsTwo">
                                     Quali sono i vantaggi di usare una paperella di gomma per i programmatori?
                                 </button>
@@ -229,7 +229,7 @@
                         </div>
                         <div class="accordion-item">
                             <h2 class="accordion-header">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                <button class="accordion-button fs-5 fw-semibold collapsed" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#faqsThree" aria-expanded="false" aria-controls="faqsThree">
                                     Posso usare la paperella di gomma indipendentemente dal linguaggio di programmazione
                                     che utilizzo?
@@ -245,7 +245,7 @@
                         </div>
                         <div class="accordion-item">
                             <h2 class="accordion-header">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                <button class="accordion-button fs-5 fw-semibold collapsed" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#faqsFour" aria-expanded="false" aria-controls="faqsFour">
                                     Quanto dettagliatamente devo spiegare il mio codice alla paperella di gomma?
                                 </button>
