--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 
 <head>
     <meta charset="UTF-8">
@@ -7,7 +7,7 @@
     <title>Ducks</title>
 
     <!-- page icon -->
-    <link rel="icon" href="./img/logo.png" type="icon">
+    <link rel="icon" href="./img/logo.png" type="icon/png">
 
     <!-- google fonts -->
     <!-- font poppins -->
@@ -94,7 +94,7 @@
                     <h1 class="jumbo-title">Rubber Duck Debuggings</h1>
                     <p class="jumbo-paragraph">Spiegare il codice a una paperella di gomma aiuta i progammatori a
                         chiarire il pensiero e individuare errori nascosti.</p>
-                    <a href="#" type="button" class="btn btn-outline-custom rounded-0">ACQUISTA SUBITO</a>
+                    <a href="#" role="button" class="btn btn-outline-custom rounded-0">ACQUISTA SUBITO</a>
                 </div>
             </div>
         </div>
@@ -154,34 +154,29 @@
         <section id="recensioni">
             <h2 class="text-center sections-title py-5">Cosa ne pensano i nostri sviluppatori</h2>
         </section>
-        </div>
+
+        <!-- # Paperelle -->
         <section class="container-fluid py-5 bg-section-paperelle" id="paperelle">
             <h2 class="sections-title text-center">La collezione di paperelle</h2>
             <p class="py-5 text-center">Una paperella per ogni stile di programmazione</p>
             <div class="row row-cols-2 row-cols-lg-3">
                 <div class="col">
-                    <figure>
                         <img src="./img/product-item1.png" alt="cool-duck">
                         <div class="stars pt-2">&#9733; &#9733; &#9733; &#9733; &#9733;</div>
-                        <figcaption class="fw-semibold pt-2">Cool-duck</figcaption>
+                        <p class="fw-semibold pt-2">Cool-duck</p>
                         <p class="fw-semibold pt-2 duck-price">&dollar; 15</p>
-                    </figure>
                 </div>
                 <div class="col">
-                    <figure>
                         <img src="./img/product-item2.png" alt="classic-duck">
                         <div class="stars pt-2">&#9733; &#9733; &#9733; &#9733; &#9733;</div>
-                        <figcaption class="fw-semibold pt-2">Classic-duck</figcaption>
+                        <p class="fw-semibold pt-2">Classic-duck</p>
                         <p class="fw-semibold pt-2 duck-price">&dollar; 29</p>
-                    </figure>
                 </div>
                 <div class="col">
-                    <figure>
                         <img src="./img/product-item3.png" alt="bat-duck">
                         <div class="stars pt-2">&#9733; &#9733; &#9733; &#9733; &#9733;</div>
-                        <figcaption class="fw-semibold pt-2">Bat-duck</figcaption>
+                        <p class="fw-semibold pt-2">Bat-duck</p>
                         <p class="fw-semibold pt-2 duck-price">&dollar; 69</p>
-                    </figure>
                 </div>
             </div>
 
